# exosphere

./: .dockerignore  .gitattributes  .gitignore  .readthedocs.yaml  COPYRIGHT  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_suggestion.md  feature_request.md
.github/workflows/: docker-image.yml  exosphere-test-minimum.yml  exosphere-test.yml  publish.yml  test-minimum.yml  test-suite.yml
LICENSES/: MIT.txt
docs/: LICENSE  NOTICE
docs/devnotes/: CLI prompt Library Choices.md  Click Library.md  Click REPL Libraries.md  Exosphere Overview.md  Patch Management.md  Redhat Package Parsing.md  Typer Library.md
docs/source/: cachefile.rst  cli.rst  command_reference.rst  concepts.rst  conf.py  configuration.rst  connections.rst  dataclasses.rst  faq.rst  gettinghelp.rst  glossary.rst  index.rst  installation.rst  objects.rst  providers.rst  providers_api.rst  quickstart.rst  reporting.rst  spelling_wordlist.txt  sudo.rst  supportedos.rst  troubleshooting.rst  ui.rst  webui.rst
docs/source/_ext/: __init__.py  exosphere_artifacts.py  exosphere_changelog.py  exosphere_cli_format.py  exosphere_help.py  exosphere_lexer.py  jsonschema_doc.py
docs/source/_static/: README
docs/source/api/: configuration.rst  dataclasses.rst  index.rst  objects.rst  providers_api.rst  reporting.rst
docs/source/changelog/: .markdownlint.jsonc  0.9.9.md  1.0.0.md  1.0.1.md  1.1.0.md  1.2.0.md  1.3.0.md  1.3.1.md  1.3.2.md  1.3.3.md  1.3.4.md  1.3.5.md  1.4.0.md  1.4.1.md  (+17 more)
examples/: config.json  config.toml  config.yaml  inventory.toml  sample-report.json  testcase.py
examples/reports/: filtered.html  filtered.json  filtered.md  filtered.txt  full-no-navigation.html  full.html  full.json  full.md  full.txt  securityonly.html  securityonly.json  securityonly.md  securityonly.txt  updatesonly.html  updatesonly.json  updatesonly.md  updatesonly.txt
scripts/: demo.tape  generate_example_reports.py  release_preflight.py
src/exosphere/: __init__.py  auth.py  cli.py  config.py  context.py  data.py  database.py  editing.py  editor.py  errors.py  fspaths.py  inventory.py  main.py  migrations.py  objects.py  paths.py  pipelining.py  repl.py  reporting.py  runners.py
tests/: conftest.py  test_cli.py  test_config.py  test_database.py  test_detect.py  test_editing.py  test_editor.py  test_fspaths.py  test_inventory.py  test_main.py  test_migrations.py  test_objects.py  test_pipelining.py  test_providers.py  test_repl.py  test_reporting.py  test_runners.py  test_security.py  test_typer_smoketest.py
tests/commands/: test_config.py  test_connections.py  test_host.py  test_inventory.py  test_report.py  test_sudo.py  test_utils.py  test_version.py
tests/setup/: test_detect.py
tests/ui/: test_app.py  test_context.py  test_dashboard.py  test_elements.py  test_integration.py  test_inventory_ui.py  test_logs.py  test_messages.py  test_palette.py
(+39 files in other folders)
