[project]
name = "exosphere"
version = "0.1.0"
description = "The highest level infrastructure tool"
readme = "README.md"
authors = [
    { name = "Alexandre Gauthier", email = "alex@underwares.org" }
]
requires-python = ">=3.12"
dependencies = [
    "fabric>=3.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.5",
]

[project.scripts]
exosphere = "exosphere.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
