[project]
name = "exosphere"
version = "0.1.0"
description = "The highest level infrastructure tool"
readme = "README.md"
authors = [
    { name = "Alexandre Gauthier", email = "alex@underwares.org" }
]
requires-python = ">=3.12"
dependencies = [
    "click-shell[readline]>=2.1 ; sys_platform != 'win32'",
    "click-shell>=2.1 ; sys_platform == 'win32'",
    "fabric>=3.2.2",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "poethepoet>=0.33.1",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.5",
]

[project.scripts]
exosphere = "exosphere.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poe.tasks]
lint = "ruff check src tests"
format = "ruff format src tests"
format-check = "ruff format --check src tests"
check = ['lint', 'format-check']
test = "pytest -v"
